Outliner and viewport missing update after deleting object #62025

Closed
opened 2019-02-28 00:09:32 +01:00 by rainbow trout · 11 comments

Blender Version
Broken: 012483b6e4
Worked: 012483b6e4~

Short description of error
Viewport and outliner miss a drawing refresh after deleting objects from the outliner.

Exact steps for others to reproduce the error
Startup file:

  • In the outliner, mouse over the light object, RMB > Delete.

Both viewport and outliner still show the lamp there, until something else triggers the update (e.g. resize editors).
Note if you mouse hover another outliner before a draw update you will get a crash.

[Original report quite was slightly misleading, I heavily edited it -- @dfelinto]

**Blender Version** Broken: 012483b6e4 Worked: 012483b6e4~ **Short description of error** Viewport and outliner miss a drawing refresh after deleting objects from the outliner. **Exact steps for others to reproduce the error** Startup file: * In the outliner, mouse over the light object, RMB > Delete. Both viewport and outliner still show the lamp there, until something else triggers the update (e.g. resize editors). Note if you mouse hover another outliner before a draw update you will get a crash. [Original report quite was slightly misleading, I heavily edited it -- @dfelinto]
Author

Added subscriber: @salmonking

Added subscriber: @salmonking
Dalai Felinto was assigned by Sebastian Parborg 2019-02-28 10:56:16 +01:00

Added subscriber: @machieb

Added subscriber: @machieb

Can´t confirm with todays build on windows.

Can´t confirm with todays build on windows.

Added subscriber: @capnm

Added subscriber: @capnm

"load factory settings" and RMB->delete camera in the outliner
clears here the outliner until you click somewhere into the viewport

(linux 9d34a9d7e5)

image.png

"load factory settings" and RMB->delete camera in the outliner clears here the outliner until you click somewhere into the viewport (linux 9d34a9d7e5) ![image.png](https://archive.blender.org/developer/F6729805/image.png)

… or moving the mouse over a second outliner e.g. in the "scripting" workspace crashes with segfault:

Thread 1 "blender8debug" received signal SIGSEGV, Segmentation fault.
0x0000555557afd079 in tree_element_id_type_to_index (te=0x7fffaafd5e48)
    at source/blender/editors/space_outliner/outliner_draw.c:1556
1556			return INDEX_ID_OB + ob->type;
(gdb) bt
#0  0x0000555557afd079 in tree_element_id_type_to_index (te=0x7fffaafd5e48)
    at source/blender/editors/space_outliner/outliner_draw.c:1556
#1  0x0000555557afd29d in outliner_draw_iconrow (C=0x7fffcf06d488, block=0x7fffab7a6208, fstyle=0x7fffccf4b2e0, scene=0x7fffccf78008, view_layer=0x7fffccf44248, soops=0x7fffcceee108, lb=0x7fffab1f02d0, level=1, xmax=195, offsx=0x7fffffffce24, ys=-82, alpha_fac=1, merged=0x7fffffffce90)
    at source/blender/editors/space_outliner/outliner_draw.c:1605
#2  0x0000555557afd39a in outliner_draw_iconrow (C=0x7fffcf06d488, block=0x7fffab7a6208, fstyle=0x7fffccf4b2e0, scene=0x7fffccf78008, view_layer=0x7fffccf44248, soops=0x7fffcceee108, lb=0x7fffab1f0260, level=0, xmax=195, offsx=0x7fffffffce24, ys=-82, alpha_fac=1, merged=0x7fffffffce90)
    at source/blender/editors/space_outliner/outliner_draw.c:1618
#3  0x0000555557afe4c7 in outliner_draw_tree_element (C=0x7fffcf06d488, block=0x7fffab7a6208, fstyle=0x7fffccf4b2e0, scene=0x7fffccf78008, view_layer=0x7fffccf44248, ar=0x7fffcc80bcc8, soops=0x7fffcceee108, te=0x7fffab1f0248, draw_grayed_out=false, startx=20, starty=0x7fffffffd86c, te_edit=0x7fffffffd8f8)
    at source/blender/editors/space_outliner/outliner_draw.c:1866
#4  0x0000555557afe62e in outliner_draw_tree_element (C=0x7fffcf06d488, block=0x7fffab7a6208, fstyle=0x7fffccf4b2e0, scene=0x7fffccf78008, view_layer=0x7fffccf44248, ar=0x7fffcc80bcc8, soops=0x7fffcceee108, te=0x7fffab1f00f8, draw_grayed_out=false, startx=0, starty=0x7fffffffd86c, te_edit=0x7fffffffd8f8)
    at source/blender/editors/space_outliner/outliner_draw.c:1887
#5  0x0000555557aff4c9 in outliner_draw_tree (C=0x7fffcf06d488, block=0x7fffab7a6208, scene=0x7fffccf78008, view_layer=0x7fffccf44248, ar=0x7fffcc80bcc8, soops=0x7fffcceee108, has_restrict_icons=true, te_edit=0x7fffffffd8f8)
    at source/blender/editors/space_outliner/outliner_draw.c:2145
#6  0x0000555557affd71 in draw_outliner (C=0x7fffcf06d488)
    at source/blender/editors/space_outliner/outliner_draw.c:2286
#7  0x0000555557af5054 in outliner_main_region_draw (C=0x7fffcf06d488, ar=0x7fffcc80bcc8)
    at source/blender/editors/space_outliner/space_outliner.c:96
#8  0x00005555580260e1 in ED_region_do_draw (C=0x7fffcf06d488, ar=0x7fffcc80bcc8)
    at source/blender/editors/screen/area.c:508
#9  0x0000555557a14de0 in wm_draw_window_offscreen (C=0x7fffcf06d488, win=0x7fffcceecf08, stereo=false)
    at source/blender/windowmanager/intern/wm_draw.c:573
#10 0x0000555557a1535e in wm_draw_window (C=0x7fffcf06d488, win=0x7fffcceecf08)
    at source/blender/windowmanager/intern/wm_draw.c:705
#11 0x0000555557a1586a in wm_draw_update (C=0x7fffcf06d488)
    at source/blender/windowmanager/intern/wm_draw.c:859
#12 0x0000555557a124e5 in WM_main (C=0x7fffcf06d488)
    at source/blender/windowmanager/intern/wm.c:424
#13 0x0000555557a0cbf9 in main (argc=1, argv=0x7fffffffdcd8)
    at source/creator/creator.c:505
… or moving the mouse over a second outliner e.g. in the "scripting" workspace crashes with segfault: ``` Thread 1 "blender8debug" received signal SIGSEGV, Segmentation fault. 0x0000555557afd079 in tree_element_id_type_to_index (te=0x7fffaafd5e48) at source/blender/editors/space_outliner/outliner_draw.c:1556 1556 return INDEX_ID_OB + ob->type; (gdb) bt #0 0x0000555557afd079 in tree_element_id_type_to_index (te=0x7fffaafd5e48) at source/blender/editors/space_outliner/outliner_draw.c:1556 #1 0x0000555557afd29d in outliner_draw_iconrow (C=0x7fffcf06d488, block=0x7fffab7a6208, fstyle=0x7fffccf4b2e0, scene=0x7fffccf78008, view_layer=0x7fffccf44248, soops=0x7fffcceee108, lb=0x7fffab1f02d0, level=1, xmax=195, offsx=0x7fffffffce24, ys=-82, alpha_fac=1, merged=0x7fffffffce90) at source/blender/editors/space_outliner/outliner_draw.c:1605 #2 0x0000555557afd39a in outliner_draw_iconrow (C=0x7fffcf06d488, block=0x7fffab7a6208, fstyle=0x7fffccf4b2e0, scene=0x7fffccf78008, view_layer=0x7fffccf44248, soops=0x7fffcceee108, lb=0x7fffab1f0260, level=0, xmax=195, offsx=0x7fffffffce24, ys=-82, alpha_fac=1, merged=0x7fffffffce90) at source/blender/editors/space_outliner/outliner_draw.c:1618 #3 0x0000555557afe4c7 in outliner_draw_tree_element (C=0x7fffcf06d488, block=0x7fffab7a6208, fstyle=0x7fffccf4b2e0, scene=0x7fffccf78008, view_layer=0x7fffccf44248, ar=0x7fffcc80bcc8, soops=0x7fffcceee108, te=0x7fffab1f0248, draw_grayed_out=false, startx=20, starty=0x7fffffffd86c, te_edit=0x7fffffffd8f8) at source/blender/editors/space_outliner/outliner_draw.c:1866 #4 0x0000555557afe62e in outliner_draw_tree_element (C=0x7fffcf06d488, block=0x7fffab7a6208, fstyle=0x7fffccf4b2e0, scene=0x7fffccf78008, view_layer=0x7fffccf44248, ar=0x7fffcc80bcc8, soops=0x7fffcceee108, te=0x7fffab1f00f8, draw_grayed_out=false, startx=0, starty=0x7fffffffd86c, te_edit=0x7fffffffd8f8) at source/blender/editors/space_outliner/outliner_draw.c:1887 #5 0x0000555557aff4c9 in outliner_draw_tree (C=0x7fffcf06d488, block=0x7fffab7a6208, scene=0x7fffccf78008, view_layer=0x7fffccf44248, ar=0x7fffcc80bcc8, soops=0x7fffcceee108, has_restrict_icons=true, te_edit=0x7fffffffd8f8) at source/blender/editors/space_outliner/outliner_draw.c:2145 #6 0x0000555557affd71 in draw_outliner (C=0x7fffcf06d488) at source/blender/editors/space_outliner/outliner_draw.c:2286 #7 0x0000555557af5054 in outliner_main_region_draw (C=0x7fffcf06d488, ar=0x7fffcc80bcc8) at source/blender/editors/space_outliner/space_outliner.c:96 #8 0x00005555580260e1 in ED_region_do_draw (C=0x7fffcf06d488, ar=0x7fffcc80bcc8) at source/blender/editors/screen/area.c:508 #9 0x0000555557a14de0 in wm_draw_window_offscreen (C=0x7fffcf06d488, win=0x7fffcceecf08, stereo=false) at source/blender/windowmanager/intern/wm_draw.c:573 #10 0x0000555557a1535e in wm_draw_window (C=0x7fffcf06d488, win=0x7fffcceecf08) at source/blender/windowmanager/intern/wm_draw.c:705 #11 0x0000555557a1586a in wm_draw_update (C=0x7fffcf06d488) at source/blender/windowmanager/intern/wm_draw.c:859 #12 0x0000555557a124e5 in WM_main (C=0x7fffcf06d488) at source/blender/windowmanager/intern/wm.c:424 #13 0x0000555557a0cbf9 in main (argc=1, argv=0x7fffffffdcd8) at source/creator/creator.c:505 ```

Confirmed here, but the original report is slightly misleading. The lamp is deleted, but viewport is not updated yet. Same for the outliner.
It would be nice to know when that started. I will look at it.

Confirmed here, but the original report is slightly misleading. The lamp is deleted, but viewport is not updated yet. Same for the outliner. It would be nice to know when that started. I will look at it.
Dalai Felinto changed title from objects cannot be deleted in outliner to Outliner and viewport missing update after deleting object 2019-03-01 18:06:05 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ideasman42 This was introduced on 012483b6e4. I will look at it, but I may pass the torche to you.

@ideasman42 This was introduced on 012483b6e4. I will look at it, but I may pass the torche to you.

This issue was referenced by 589d089472

This issue was referenced by 589d08947220e6ffe173fd2235dfb4f75dabdcdb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62025
No description provided.