Fix T62025: Outliner and viewport missing update after deleting object

Bug introduced on 012483b6e4a1453c3e990127db001617997a9d64.

Since we notify similar things when changing active and selected
objects, I believe we didn't notice this was missing a ND_OB_SELECT
notification before the small refactor to use the messenging system
exposed that bug.